tests/rosetta/out/Pascal/cartesian-product-of-two-or-more-lists-1.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/cartesian-product-of-two-or-more-lists-1.pas
cartesian-product-of-two-or-more-lists-1.pas(15,7) Error: Identifier not found "x"
cartesian-product-of-two-or-more-lists-1.pas(17,9) Error: Identifier not found "y"
cartesian-product-of-two-or-more-lists-1.pas(19,23) Error: Identifier not found "_appendList"
cartesian-product-of-two-or-more-lists-1.pas(19,45) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
